# peg-in-hole

./: .gitignore  README.md  kg2_test.py  pyproject.toml  ruff.toml  socket.vxpart
assets/vortex/: config.vxc  config_withgraphics - Copy.vxc
assets/vortex/Kinova Gen2 Unjamming/Kinova Gen 2/: kinova_gen2.vxassembly
assets/vortex/Kinova Gen2 Unjamming/Scenes/: kinova_peg-in-hole.vxscene
assets/vortex/Kinova Gen2 Unjamming/_old/: kinova_gen2_sq_peg3dof.vxscene
cfg/: config.yaml  logging.ini
cfg/robot/: kinova_gen2.yaml
cfg/task/: Insert_Kinova3DoF.yaml  RPL_Insert_3DoF.yaml
examples/: Example_AngularControl.cpp  jaco2_API_commands_tests.py  jaco2_env.py  jaco2_test3dof.py
examples/Vortex/: create-content.bat  csa-jamming.py
examples/Vortex/assets/: jamming-scene.vxscene
examples/Vortex/assets/dynamics/: ground.vxpart  jamming-assem.vxassembly  jamming-mech.vxmechanism  manipulator.vxpart  plug.vxpart  socket.vxpart
peg_in_hole/: ik_test.py  main.py  plots.py  test.py  train.py  train3dof.py
peg_in_hole/ddpg/: buffer.py  ddpg_sb3.py  run_env.py  train3dof.py
peg_in_hole/rl_algos/: buffer.py  networks.py  rl_algos.py
peg_in_hole/robot_kg2_pkg/: kg2_test.py  kg2_test2.py
peg_in_hole/robot_kg2_pkg/robot_kg2/: RobotKG2.py
peg_in_hole/robot_kg2_pkg/robot_kg2/kinova_types/: __init__.py  error_codes.py  hand_command.py  position_type.py
peg_in_hole/settings/: __init__.py  settings.py
peg_in_hole/tasks/: RPL_Insert_3DoF.py  __init__.py  kinova_gen2_env.py
peg_in_hole/utils/: Neptune.py  neptune.py  plots.py
peg_in_hole/vortex_envs/: __init__.py  kinova_gen2_env.py  robot_schema_config.py
src/: kg2_test.py  main.py
src/kg2-interface/kinova_types/: kinova_types.py
src/kg2_robot/: KG2_Robot.py  utils.py
src/robot_kg2_pkg/: pyproject.toml
src/robot_kg2_pkg/robot_kg2/: __init__.py
src/robot_kg2_pkg/robot_kg2/kinova_types/: kinova_types.py
src/settings/: __init__.py  settings.py
src/vortex_envs/: kinova_gen2_env.py  vortex_interface.py
src/vortex_envs/vortex_resources/: config_withgraphics.vxc
src/vortex_envs/vortex_resources/Kinova Gen2 Unjamming/: kinova_gen2_sq_peg3dof.vxscene
src/vortex_interface/: vortex_interface.py
tmp/: monitor.csv
