[tool.poetry]
name = "peg-in-hole"
version = "0.1.0"
description = ""
authors = ["Charles <charles.sirois2@mail.mcgill.ca>"]
readme = "README.md"
packages = [
    { include = "peg_in_hole" },
]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "1.24.3"
gymnasium = "^0.29.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
matplotlib = "3.7.4"
python-json-logger = "^2.0.7"
# tensorflow = "2.13.1"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
