[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_kg2"
authors = [
    {name = "Charles Sirois", email = "charles.sirois2@mail.mcgill.ca"},
]
description = "..."
readme = "README.md"
requires-python = ">=3.7"
#keywords = ["one", "two"]
#license = {text = "BSD-3-Clause"}
classifiers = []
dependencies = [
#    "requests",
#    'importlib-metadata; python_version<"3.8"',
]

version = "0.0.1"

#dynamic = ["version"]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

#[project.optional-dependencies]
#pdf = ["ReportLab>=1.2", "RXP"]
#rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]
#
#[project.scripts]
#my-script = "my_package.module:function"